--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,3 +1,120 @@
-.hidden {
-	background-color: red;
+/*#primary_nav_wrap
+{
+    margin-top:15px;
+    position:fixed;
+}
+
+#primary_nav_wrap ul
+{
+    list-style:none;
+    position:fixed;
+    float:left;
+    margin:0;
+    padding:0
+}
+
+#primary_nav_wrap ul a
+{   
+    display:block;
+    color:#333;
+    text-decoration:none;
+    font-weight:700;
+    font-size:12px;
+    line-height:32px;
+    padding:0 15px;
+    font-family:"HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+#primary_nav_wrap ul li
+{
+    position:relative;
+    float:left;
+    margin:0;
+    padding:0
+}
+
+#primary_nav_wrap ul li.current-menu-item
+{
+    background:#ddd
+}
+
+#primary_nav_wrap ul li:hover
+{
+    background:#777B7D
+}
+
+#primary_nav_wrap ul ul
+{
+    opacity: 0.80; 
+    display:none;
+    position:absolute;
+    top:100%;
+    left:0;
+    background:#fff;
+    padding:0;
+}
+
+#primary_nav_wrap ul ul li
+{
+    float:none;
+    width:100%
+}
+
+#primary_nav_wrap ul ul a
+{
+    line-height:120%;
+    padding:10px 15px
+}
+
+#primary_nav_wrap ul ul ul
+{
+    top:0;
+    left:100%
+}
+
+#primary_nav_wrap ul li:hover > ul
+{
+    display:block
+}
+*/
+
+#nav {
+    list-style: none;
+    font-weight: bold;
+    margin-bottom: 10px;
+    width: 100%;
+    text-align: center;
+    background-color: #777B7D;
+    height:38px;
+}
+
+#nav ul {
+    list-style-type: none;
+    margin: 0px;
+    padding: 0;
+    width: 100%;
+}
+
+#nav li {
+    margin: 0px;
+    display:
+}
+
+#nav li a {
+    padding: 10px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #FFFFFF;
+    background-color: #777B7D;
+    float: left
+}
+
+#nav li a:hover {
+    color: #FFFFFF;
+    background-color: #000000;
+}
+
+
+.container {
+		position:inline-block;
 }
