--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,84 +1,3 @@
-/*#primary_nav_wrap
-{
-    margin-top:15px;
-    position:fixed;
-}
-
-#primary_nav_wrap ul
-{
-    list-style:none;
-    position:fixed;
-    float:left;
-    margin:0;
-    padding:0
-}
-
-#primary_nav_wrap ul a
-{   
-    display:block;
-    color:#333;
-    text-decoration:none;
-    font-weight:700;
-    font-size:12px;
-    line-height:32px;
-    padding:0 15px;
-    font-family:"HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-
-#primary_nav_wrap ul li
-{
-    position:relative;
-    float:left;
-    margin:0;
-    padding:0
-}
-
-#primary_nav_wrap ul li.current-menu-item
-{
-    background:#ddd
-}
-
-#primary_nav_wrap ul li:hover
-{
-    background:#777B7D
-}
-
-#primary_nav_wrap ul ul
-{
-    opacity: 0.80; 
-    display:none;
-    position:absolute;
-    top:100%;
-    left:0;
-    background:#fff;
-    padding:0;
-}
-
-#primary_nav_wrap ul ul li
-{
-    float:none;
-    width:100%
-}
-
-#primary_nav_wrap ul ul a
-{
-    line-height:120%;
-    padding:10px 15px
-}
-
-#primary_nav_wrap ul ul ul
-{
-    top:0;
-    left:100%
-}
-
-#primary_nav_wrap ul li:hover > ul
-{
-    display:block
-}
-*/
-
-
 #nav {
     list-style: none;
     font-weight: bold;
@@ -114,19 +33,14 @@
     color: #FFFFFF;
     background-color: #000000;
 }
-
-/*.pics {
-	width:50%;
-	height:50%;
-}*/
-
+/*
 .container {
-/*		display: -webkit-flex;
+		display: -webkit-flex;
   	display: -moz-flex;
   	display: -ms-flex;
   	display: -o-flex;
   	display: flex;
-  	-webkit-flex-flow: row wrap;*/
+  	-webkit-flex-flow: row wrap;
 
   	display: -webkit-flex;
     -webkit-flex-direction: row;
@@ -137,26 +51,35 @@
 }
 
 .overlay {
-	overflow-y:hidden;
 	position:absolute;
 	top:0;
 	left:0;
 	height:100%;
 	width:100%;
-	background:#000;
-	opacity:0;
-	/*filter:alpha(opacity=0);*/
+	background:gray;
+	opacity:0.7;*/
+	/*filter:alpha(opacity=0);
 	z-index:50;
 }
 .lightbox {
 	background-color:black;
 	position:absolute;
 	/*opacity:0;*/
-	/*filter:alpha(opacity=0);*/
+	/*filter:alpha(opacity=0);
 	left:-9999em;
 	z-index:51;
 }
+.fade {
+  opacity: 1;
+  transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
+  }
 
-.pics {
+.animate-enter, .animate-leave {
+	transition: 500ms ease-in all;
+	position: relative;
+	display: block;
+} 
 
-}
+
